--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ FPPAssignments/Assignment2/.idea/
 FPPAssignments/Assignment2/out/
 FPPAssignments/Assignment2/*.iml
 
+FPPAssignments/Assignment3/.idea/
+FPPAssignments/Assignment3/out/
+FPPAssignments/Assignment3/*.iml
+
+FPPAssignments/Assignment4/.idea/
+FPPAssignments/Assignment4/out/
+FPPAssignments/Assignment4/*.iml
+
+FPPAssignments/Assignment5/.idea/
+FPPAssignments/Assignment5/out/
+FPPAssignments/Assignment5/*.iml
+
+FPPAssignments/.idea/
+FPPAssignments/out/
+FPPAssignments/*.iml
